--- a/stule.css
+++ b/stule.css
@@ -3,3 +3,115 @@
     margin: 0;
     padding: 0;
 }
+
+.md-main{
+    width: 100%;
+    background-color:  #5a5555;
+
+}
+.md-center{
+    width: 90%;
+    margin: auto;
+
+}
+.md-jucob{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.ican{
+    margin-top: 20px;
+    color: white;
+    width: 32%;
+    height: 221px;
+    border-radius: 32px;
+    background-color:  #000000;
+}
+.ican img{
+    margin-top: 54px;
+
+   
+   
+
+}
+.ican img:nth-child(1){
+   margin-left: 30px;
+}
+.ican h3{
+    width: 190px;
+    height: 40px;
+    margin: 25px 30px;
+
+}
+.ican h5{
+    color: white;
+    margin-left: 30px;
+    opacity: 0.7;
+}
+.every{
+    display: flex;
+    justify-content: space-between;
+}
+.md-footer{
+    color: white;
+    margin-top: 200px;
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+.home ul li{
+    margin: 10px 0px;
+    text-decoration: none;
+    list-style-type: none;
+}
+.style ul li{
+   
+    margin: 10px 0px;
+    list-style-type: none;
+    text-decoration: none;
+}
+.home ul li a{
+    padding: 5px 5px;
+    margin: 30px 0px;
+    color: white;
+    text-decoration: none;
+    list-style-type: none;
+}
+.style ul li a{
+    padding: 5px 5px;
+    color: white;
+    list-style-type: none;
+    text-decoration: none;
+}
+.style ul li a:hover{
+    background-color: black;
+    color: white;
+}
+.home ul li a:hover{
+    
+    background-color: black;
+    color: white;
+}
+.cast h1{
+    margin-bottom: 30px;
+}
+.cast a img{
+    padding: 5px 5px;
+    margin: 0px 5px;
+}
+.cast a img:hover{
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+
+}
+.icons img{
+    margin: 0px 10px;
+    padding: 8px 8px;
+    border-radius: 5px;
+}
+.icons img:hover{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
