--- a/stule.css
+++ b/stule.css
@@ -114,7 +114,7 @@ letter-spacing: 0.8px;
     margin-bottom: 40px;
 
     color: #118DA8;
-
+}
 .shahrom-container{
     background-color: #252525;
     height: 200vh;
